@@ -1,3 +1,8 @@
+2010-05-05 Sascha Korth  <sascha@brotherskorth.com>
+	* change of plugin names
+	* fixed a foreach error
+	* fixed a facebook api constructor error
+	
 2010-05-04 Sascha Korth  <sascha@brotherskorth.com>
 	* fixed Bug #7556
 	* some autoload fixes
